# VISUALine

./: .gitignore  Dockerfile  GEMINI.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  run_app.sh  run_local_bkp.sh  uv.toml
app_distribution/: README_DEPLOY.md
configs/: base_config.yaml
configs/pipeline_configs/: 01_cinematic_prompt_blur_fast.yaml  01_cinematic_prompt_blur_hq_sam2.yaml  02_privacy_redaction.yaml  03_old_video_enhancement_fast.yaml  03_old_video_enhancement_span_x4.yaml  04_smart_vertical_reframe.yaml  05_slow_motion_rife_x2.yaml  06_dynamic_upscale.yaml  06_dynamic_upscale_span.yaml  pipeline_1.yaml  pipeline_2.yaml  test_colorization.yaml  test_denoising.yaml  test_dynamic_upscale.yaml  test_grayscale.yaml  test_interpolation.yaml  test_upscale.yaml  test_upscale_span.yaml
data/output/benchmark/: benchmark_results.json
docs/: ENHANCEMENTS_JUNE_2026.md
paper_work/: VISUALine_main_cited.tex  references.bib
playground/: __init__.py  benchmark_dynamic.py  compile_torch_trt.py  compile_universal.py  comprehensive_benchmark.py  dummy_ui.html  export_trt_anime.py  export_trt_span.py  nodes_playground.py  pipelines_playground.py  test_dynamic_upscale.py  utils_playground.py
scripts/: entrypoint.sh
src/api/: server.py
src/api/routes/: system.py
src/api/schemas/: image_schema.py  system_schema.py
src/app/: ui_utils.py
src/core/: node_base.py  resource_manager.py  task_executer.py
src/models/: model_2_wrapper.py
src/pipelines/: pipeline_2.py
src/utils/: file_io.py  visualization.py
src/visualine/: __main__.py
src/visualine/api/: server.py
src/visualine/api/routes/: __init__.py  image.py  jobs.py  pipelines.py  system.py  video.py
src/visualine/api/schemas/: __init__.py  image_schema.py  job_schema.py  pipeline_schema.py  system_schema.py  video_schema.py
src/visualine/api/services/: __init__.py  image_service.py  optimization_service.py  pipeline_service.py  system_service.py  video_service.py
src/visualine/app/: electron-builder.yml  main_app.py  package-lock.json  package.json
src/visualine/app/src/main/: index.js
src/visualine/app/src/preload/: index.js
src/visualine/app/src/renderer/: index.html
src/visualine/app/src/renderer/src/: App.vue
src/visualine/app/src/renderer/src/api/: client.js  imageApi.js  jobsApi.js  pipelineApi.js  systemApi.js  videoApi.js
src/visualine/app/src/renderer/src/assets/: main.css
src/visualine/app/src/renderer/src/components/: Versions.vue
src/visualine/app/src/renderer/src/components/controls/: AdvancedControls.vue  DynamicControl.vue  ParameterPanel.vue
src/visualine/app/src/renderer/src/components/jobs/: JobProgress.vue  OutputActions.vue
src/visualine/app/src/renderer/src/components/layout/: AppShell.vue  Sidebar.vue  StatusBadge.vue  TopBar.vue
src/visualine/app/src/renderer/src/components/media/: BrowserFileExplorer.vue  MediaPanel.vue  MediaPreview.vue  ProcessingOverlay.vue
src/visualine/app/src/renderer/src/components/system/: OptimizationHub.vue
src/visualine/app/src/renderer/src/components/workflows/: WorkflowCard.vue  WorkflowHeader.vue  WorkflowList.vue  WorkflowPickerDrawer.vue
src/visualine/app/src/renderer/src/components/workspace/: MainWorkspace.vue
src/visualine/core/: config_loader.py  logger.py  node_base.py  pipeline_manager.py  resource_manager.py  task_executer.py
src/visualine/models/: __init__.py  base_wrapper.py  loader.py
src/visualine/models/archs/: IFNet_HDv3.py  __init__.py  colorization_wrapper.py  ddcolor_arch.py  dis_wrapper.py  grounding_dino_wrapper.py  realesrgan_wrapper.py  sam2_wrapper.py  scunet_wrapper.py  span_arch.py  span_wrapper.py
src/visualine/models/archs/ddcolor_arch_utils/: convnext.py  unet.py
src/visualine/nodes/: __init__.py
src/visualine/nodes/colorize/: colorization_node.py  temporal_prop_node.py
src/visualine/nodes/denoise/: scunet_node.py
src/visualine/nodes/interpolation/: rife_node.py
src/visualine/nodes/segmentation/: prompt_box_detection_node.py  sam2_tracking_node.py
src/visualine/nodes/upscale/: dynamic_upscale_node.py  realesrgan_node.py  realesrgan_trt_node.py  span_node.py
src/visualine/nodes/utils/: blur_node.py  box_redaction_node.py  box_utils.py  grayscale_node.py  remove_background_node.py  smart_reframe_node.py  soft_box_mask_node.py  solid_background_node.py  video_enhance_node.py
src/visualine/pipelines/: base_pipeline.py
src/visualine/utils/: file_io.py  metrics.py  resource_utils.py  video_utils.py
weights/: real_esrgan.pth  scu_net.pth  spanx4_ch48_trt.ts
