[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visualine"
version = "0.1.0"
description = "An open-source AI suite for visual enhancement."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Mohamed Marzouk", email = "marzouk@vacts.net" },
    { name = "Theodoros Milad", email = "" },
    { name = "Yahia [Yahia's Last Name]", email = "" },
    { name = "Mohamed Ezzat", email = "" },
    { name = "Kareem Moamen", email = "" },
    { name = "Mazen Gaber", email = "" },
]

dependencies = [
    "torch==2.9.0",
    "torchvision==0.24.0",
    "pyyaml",
    "streamlit",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "opencv-python-headless",
    "numpy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
visualine-ui = "visualine.app.main_app:main"
visualine-api = "visualine.api.server:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/visualine"]